--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -5,28 +5,27 @@
 # Copyright (C) 2019 KFERMercer <KFER.Mercer@gmail.com>
 # 
 # <https://github.com/KFERMercer/OpenWrt-CI>
-#
+# 
 
 name: OpenWrt-CI
 
 on:
-  push:
-    branches: 
-      - master
   schedule:
     - cron: 0 20 * * *
-  release:
-    types: [published]
+  push:
+    tags:
+      - '*'
 
 jobs:
 
-  build:
+  build_openwrt:
 
-    runs-on: ubuntu-latest
+    name: Build OpenWrt and release
+    runs-on: ubuntu-18.04
 
     steps:
       - name: Checkout
-        uses: actions/checkout@master
+        uses: actions/checkout@v2
         with:
           ref: master
 
@@ -38,259 +37,25 @@ jobs:
           sudo rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d
           sudo -E apt-get -y purge azure-cli ghc* zulu* hhvm llvm* firefox google* dotnet* powershell openjdk* mysql* php*
           sudo -E apt-get update
-          sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch python3 unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs git-core gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler
+          sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch python3 unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs gcc-multilib g++-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler antlr3 gperf
           sudo -E apt-get -y autoremove --purge
           sudo -E apt-get clean
 
-          # 利用挂载在 /mnt/ 的 14G 额外空间:
-          # sudo mkdir -p -m 777 /mnt/openwrt/bin /mnt/openwrt/build_dir/host /mnt/openwrt/build_dir/hostpkg /mnt/openwrt/dl /mnt/openwrt/feeds /mnt/openwrt/staging_dir
-          # ln -s /mnt/openwrt/bin ./bin
-          # mkdir -p ./build_dir/host && ln -s /mnt/openwrt/build_dir/host ./build_dir/host
-          # mkdir -p ./build_dir/host && ln -s /mnt/openwrt/build_dir/hostpkg ./build_dir/hostpkg
-          # ln -s /mnt/openwrt/dl ./dl
-          # ln -s /mnt/openwrt/feeds ./feeds
-          # ln -s /mnt/openwrt/staging_dir ./staging_dir
-
           df -h
-      
-      
-      #-------------↓--自己手动添加的第三方插件、主题--↓-------------
-      - name: 自定义插件主题。
-        run: |
-          cd package
-          mkdir openwrt-packages
-          cd openwrt-packages
-          git clone https://github.com/tzxiaozhen88/luci-app-koolproxyR.git
-          git clone https://github.com/openwrt-develop/luci-theme-atmaterial.git
-          git clone https://github.com/rosywrt/luci-theme-rosy.git
-      #-------------↑--自己手动添加的第三方插件、主题--↑-------------
 
       - name: Update feeds
         run: |
+          sed -i 's/\"#src-git\"/\"src-git\"/g' ./feeds.conf.default
           ./scripts/feeds update -a
           ./scripts/feeds install -a
 
       - name: Generate configuration file
-        run: |
-          rm -f ./.config*
-          touch ./.config
-
-          #
-          # ========================固件定制部分========================
-          # 
-
-          # 
-          # 如果不对本区块做出任何编辑, 则生成默认配置固件. 
-          # 
-
-          # 以下为定制化固件选项和说明:
-          #
-
-          #
-          # 有些插件/选项是默认开启的, 如果想要关闭, 请参照以下示例进行编写:
-          # 
-          #          =========================================
-          #         |  # 取消编译VMware镜像:                   |
-          #         |  cat >> .config <<EOF                   |
-          #         |  # CONFIG_VMDK_IMAGES is not set        |
-          #         |  EOF                                    |
-          #          =========================================
-          #
-
-          # 
-          # 以下是一些提前准备好的一些插件选项.
-          # 直接取消注释相应代码块即可应用. 不要取消注释代码块上的汉字说明.
-          # 如果不需要代码块里的某一项配置, 只需要删除相应行.
-          #
-          # 如果需要其他插件, 请按照示例自行添加.
-          # 注意, 只需添加依赖链顶端的包. 如果你需要插件 A, 同时 A 依赖 B, 即只需要添加 A.
-          # 
-          # 无论你想要对固件进行怎样的定制, 都需要且只需要修改 EOF 回环内的内容.
-          # 
-
-          # 编译x64固件:
-          cat >> .config <<EOF
-          CONFIG_TARGET_x86=y
-          CONFIG_TARGET_x86_64=y
-          CONFIG_TARGET_x86_64_Generic=y
-          EOF
-
-          # 设置固件大小:
-          cat >> .config <<EOF
-          CONFIG_TARGET_KERNEL_PARTSIZE=2048
-          CONFIG_TARGET_ROOTFS_PARTSIZE=10240
-          EOF
-          
-          # 固件压缩:
-          cat >> .config <<EOF
-          CONFIG_TARGET_IMAGES_GZIP=y
-          EOF
-
-          # 编译UEFI固件:
-          cat >> .config <<EOF
-          CONFIG_EFI_IMAGES=y
-          EOF
-
-          # IPv6支持:
-          cat >> .config <<EOF
-          CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
-          CONFIG_PACKAGE_ipv6helper=y
-          EOF
-
-          # 多文件系统支持:
-          cat >> .config <<EOF
-          CONFIG_PACKAGE_kmod-fs-nfs=y
-          CONFIG_PACKAGE_kmod-fs-nfs-common=y
-          CONFIG_PACKAGE_kmod-fs-nfs-v3=y
-          CONFIG_PACKAGE_kmod-fs-nfs-v4=y
-          CONFIG_PACKAGE_kmod-fs-ntfs=y
-          CONFIG_PACKAGE_kmod-fs-squashfs=y
-          EOF
-
-          # USB3.0支持:
-          cat >> .config <<EOF
-          CONFIG_PACKAGE_kmod-usb-ohci=y
-          CONFIG_PACKAGE_kmod-usb-ohci-pci=y
-          CONFIG_PACKAGE_kmod-usb2=y
-          CONFIG_PACKAGE_kmod-usb2-pci=y
-          CONFIG_PACKAGE_kmod-usb3=y
-          EOF
-
-          # 常用LuCI插件选择:
-          cat >> .config <<EOF
-          CONFIG_PACKAGE_luci-app-adbyby-plus=y
-          CONFIG_PACKAGE_luci-app-aria2=y
-          CONFIG_PACKAGE_luci-app-baidupcs-web=y
-          CONFIG_PACKAGE_luci-app-docker=y
-          CONFIG_PACKAGE_luci-app-frpc=y
-          CONFIG_PACKAGE_luci-app-kodexplorer=y
-          CONFIG_PACKAGE_luci-app-minidlna=y
-          CONFIG_PACKAGE_luci-app-openvpn=y
-          CONFIG_PACKAGE_luci-app-openvpn-server=y
-          CONFIG_PACKAGE_luci-app-qbittorrent=y
-          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
-          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
-          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
-          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Socks=y
-          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=y
-          CONFIG_PACKAGE_luci-app-ttyd=y
-          CONFIG_PACKAGE_luci-app-v2ray-server=y
-          CONFIG_PACKAGE_luci-app-verysync=y
-          CONFIG_PACKAGE_luci-app-webadmin=y
-          CONFIG_PACKAGE_luci-app-wireguard=y
-          CONFIG_PACKAGE_luci-app-wrtbwmon=y  #实时流量监测
-          #-------------↓--自己手动打开的功能--↓-------------
-          # CONFIG_PACKAGE_luci-app-accesscontrol=y #访问时间控制
-          # CONFIG_PACKAGE_luci-app-adblock=y #ADB广告过滤
-          # #(已有) CONFIG_PACKAGE_luci-app-adbyby-plus=y #广告屏蔽大师Plus+
-          # CONFIG_PACKAGE_luci-app-ahcp=y #支持AHCPd
-          # CONFIG_PACKAGE_luci-app-aliddns=y #阿里DDNS客户端
-          # CONFIG_PACKAGE_luci-app-amule=y #aMule下载工具
-          # #(已有) CONFIG_PACKAGE_luci-app-aria2=y # Aria2下载工具
-          # CONFIG_PACKAGE_luci-app-arpbind=y #IP/MAC绑定
-          # CONFIG_PACKAGE_luci-app-asterisk=y #支持Asterisk电话服务器
-          # CONFIG_PACKAGE_luci-app-attendedsysupgrade=y #固件更新升级相关
-          # CONFIG_PACKAGE_luci-app-autoreboot=y #支持计划重启
-          # CONFIG_PACKAGE_luci-app-bmx6=y #BMX6路由协议
-          # CONFIG_PACKAGE_luci-app-bmx7=y #BMX7路由协议
-          # CONFIG_PACKAGE_luci-app-caldav=y #联系人
-          # CONFIG_PACKAGE_luci-app-cjdns=y #加密IPV6网络相关
-          # #(经 github 的 Actions 测试，编译不通过！) CONFIG_PACKAGE_luci-app-cshark=y #CloudShark捕获工具
-          # CONFIG_PACKAGE_luci-app-ddns=y #动态域名 DNS
-          # CONFIG_PACKAGE_luci-app-diag-core=y #core诊断工具
-          # CONFIG_PACKAGE_luci-app-dnscrypt-proxy=y #DNSCrypt解决DNS污染
-          # CONFIG_PACKAGE_luci-app-dnscrypt-dnsforwarder=y #DNSForwarder防DNS污染
-          # CONFIG_PACKAGE_luci-app-e2guardian=y #Web内容过滤器
-          # CONFIG_PACKAGE_luci-app-filetransfer=y #文件传输
-          # CONFIG_PACKAGE_luci-app-firewall=y #添加防火墙
-          # CONFIG_PACKAGE_luci-app-flowoffload=y #Turbo ACC FLOW转发加速
-          # CONFIG_PACKAGE_luci-app-hd-idle=y #硬盘休眠
-          # CONFIG_PACKAGE_luci-app-hnet=y #Homenet Status家庭网络控制协议
-          # CONFIG_PACKAGE_luci-app-meshwizard=y #网络设置向导
-          # #(已有) CONFIG_PACKAGE_luci-app-minidlna=y #完全兼容DLNA / UPnP-AV客户端的服务器软件
-          # CONFIG_PACKAGE_luci-app-nlbwmon=y #网络带宽监视器
-          # CONFIG_PACKAGE_luci-app-noddos=y #NodDOS Clients 阻止DDoS攻击
-          # CONFIG_PACKAGE_luci-app-ntpc=y #NTP时间同步服务器
-          # CONFIG_PACKAGE_luci-app-p910nd=y #打印服务器模块
-          # CONFIG_PACKAGE_luci-app-pppoe-relay=y #PPPoE NAT穿透 点对点协议(PPP)
-          # CONFIG_PACKAGE_luci-app-pptp-server=y #virtual服务器 pptp
-          # CONFIG_PACKAGE_luci-app-privoxy=y #Privoxy网络代理(带过滤无缓存)
-          # CONFIG_PACKAGE_luci-app-qos=y #流量服务质量(QoS)流控
-          # CONFIG_PACKAGE_luci-app-radicale=y #CalDAV/CardDAV同步工具
-          # CONFIG_PACKAGE_luci-app-ramfree=y #释放内存
-          # CONFIG_PACKAGE_luci-app-rp-pppoe-server=y #Roaring Penguin PPPoE Server 服务器
-          # CONFIG_PACKAGE_luci-app-samba=y #网络共享(Samba)
-          # #(经 github 的 Actions 测试，编译不通过！) CONFIG_PACKAGE_luci-app-samba4=y #网络共享(Samba4)
-          # CONFIG_PACKAGE_luci-app-sfe=y #Turbo ACC网络加速(开启Fast Path转发加速)
-          # CONFIG_PACKAGE_luci-app-shairplay=y #支持AirPlay功能
-          # CONFIG_PACKAGE_luci-app-siitwizard=y #SIIT配置向导 SIIT-Wizzard
-          # CONFIG_PACKAGE_luci-app-simple-adblock=y #简单的广告拦截
-          # #(已弃用) CONFIG_PACKAGE_luci-app-simple-softethervirtual=y #SoftEther virtual服务器 NAT穿透（已弃）
-          # CONFIG_PACKAGE_luci-app-splash=y #Client-Splash是无线MESH网络的一个热点认证系统
-          # CONFIG_PACKAGE_luci-app-sqm=y #流量智能队列管理(QOS)
-          # CONFIG_PACKAGE_luci-app-statistics=y #流量监控工具
-          # # 
-          # CONFIG_PACKAGE_luci-app-syncdial=y #多拨虚拟网卡(原macvlan)
-          # # 
-          # CONFIG_PACKAGE_luci-app-tinyproxy=y #Tinyproxy是 HTTP(S)代理服务器
-          # CONFIG_PACKAGE_luci-app-transmission=y #BT下载工具
-          # CONFIG_PACKAGE_luci-app-unbound=y #Unbound DNS解析器
-          # CONFIG_PACKAGE_luci-app-upnp=y #通用即插即用UPnP(端口自动转发)
-          # CONFIG_PACKAGE_luci-app-usb-printer=y #USB 打印服务器
-          # CONFIG_PACKAGE_luci-app-v2ray-pro=y #V2Ray透明代理
-          # CONFIG_PACKAGE_luci-app-vlmcsd=y #KMS服务器设置
-          # CONFIG_PACKAGE_luci-app-vnstat=y #vnStat网络监控(图表)
-          # CONFIG_PACKAGE_luci-app-vsftpd=y #FTP服务器
-          # CONFIG_PACKAGE_luci-app-watchcat=y #断网检测功能与定时重启
-          # CONFIG_PACKAGE_luci-app-webadmin=y #Web管理页面设置
-          # CONFIG_PACKAGE_luci-app-wol=y #WOL网络唤醒
-          #-------------↑--自己手动打开的功能--↑-------------
-          
-          #-------------↓--自己手动添加的第三方插件--↓-------------
-          CONFIG_PACKAGE_luci-app-koolproxyR=y
-          #-------------↑--自己手动添加的第三方插件--↑-------------
-          
-          EOF
-
-          # LuCI主题:
-          cat >> .config <<EOF
-          CONFIG_PACKAGE_luci-theme-argon=y
-          CONFIG_PACKAGE_luci-theme-netgear=y
-          #-------------↓--自己手动添加的第三方主题--↓-------------
-          CONFIG_PACKAGE_luci-theme-atmaterial=y #https://github.com/openwrt-develop/luci-theme-atmaterial
-          CONFIG_PACKAGE_luci-theme-rosy=y #https://github.com/rosywrt/luci-theme-rosy
-          #-------------↑--自己手动添加的第三方主题--↑-------------
-          EOF
-
-          # 常用软件包:
-          cat >> .config <<EOF
-          CONFIG_PACKAGE_curl=y
-          CONFIG_PACKAGE_htop=y
-          CONFIG_PACKAGE_nano=y
-          CONFIG_PACKAGE_screen=y
-          CONFIG_PACKAGE_tree=y
-          CONFIG_PACKAGE_vim-fuller=y
-          CONFIG_PACKAGE_wget=y
-          EOF
-
-          # 取消编译VMware镜像以及镜像填充 (不要删除被缩进的注释符号):
-          cat >> .config <<EOF
-          # CONFIG_TARGET_IMAGES_PAD is not set
-          # CONFIG_VMDK_IMAGES is not set
-          EOF
-
-          # 
-          # ========================固件定制部分结束========================
-          # 
-
-          sed -i 's/^[ \t]*//g' ./.config
-          make defconfig
+        run: make defconfig
 
       - name: Make download
         run: |
           make download -j8
-          find ./dl/ -size -1024c -exec rm -f {} \;
-          df -h
+          find dl -size -1024c -exec rm -f {} \;
 
       - name: Compile firmware
         run: |
@@ -310,5 +75,27 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@master
         with:
-          name: OpenWrt firmware
+          name: OpenWrt_firmware
           path: ./bin/targets/
+
+      - name: Create release
+        if: github.event == 'push'
+        id: create_release
+        uses: actions/create-release@v1.0.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: ${{ github.ref }}
+          draft: false
+          prerelease: false      
+
+      - name: Upload release asset
+        if: github.event == 'push'
+        id: upload-release-asset 
+        uses: actions/upload-release-asset@v1.0.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./bin/targets/*/*/
